--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -1,15 +1,19 @@
-<form>
-    <h2>Nova Transferência</h2>
-     
-    <div>
-      <label for="valor">Valor</label>
-      <input type="text" name="valor" id="valor">
-    </div>
-  
-    <div>
-      <label for="destino">Destino</label>
-      <input type="text" name="destino" id="destino">
-    </div>
-  
-    <button>Transferir</button>
-  </form>
+<section class="container">
+  <form class="formulario" (ngSubmit)="transferir()">
+      <h2 class="formulario__titulo ">Nova Transferência</h2>
+
+      <div class="form-field">
+        <label class="form-field__label" for="valor">Valor</label>
+        <input class="form-field__input" type="text" name="valor" id="valor">
+      </div>
+
+      <div class="form-field">
+        <label class="form-field__label" for="destino">Destino</label>
+        <input class="form-field__input" type="text" name="destino" id="destino">
+      </div>
+
+      <div class="botao-wrapper">
+        <button type="submit" class="botao">Transferir</button>
+      </div>
+    </form>
+</section>
