--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -1,15 +1,15 @@
 <section class="container">
-  <form class="formulario" (ngSubmit)="transferir()">
+  <form class="formulario" (ngSubmit)="transferir()"> <!--ngSubmit é um event binding-->
       <h2 class="formulario__titulo ">Nova Transferência</h2>
 
       <div class="form-field">
         <label class="form-field__label" for="valor">Valor</label>
-        <input class="form-field__input" type="text" name="valor" id="valor">
+        <input class="form-field__input" type="text" name="valor" id="valor" [(ngModel)]="valor" /> <!-- este é um two way data bindind, existe tambem o property binding que é escrito assim [ngModel]="" -->
       </div>
 
       <div class="form-field">
         <label class="form-field__label" for="destino">Destino</label>
-        <input class="form-field__input" type="text" name="destino" id="destino">
+        <input class="form-field__input" type="text" name="destino" id="destino" [(ngModel)]="destino" />
       </div>
 
       <div class="botao-wrapper">
